Se Realiza la estructura basica del Backend, se realiza instalacion de dependencias en el backend, se prueba la conexion, se implementa DTO como capa adicional al servicio. Se hacen pruebas del front con estructura inicial (instalacion de dependencias y verificacion de funcionalidad inicial)

--- a/back/pom.xml
+++ b/back/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.com.sofka</groupId>
-	<artifactId>crud</artifactId>
+	<artifactId>back</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>crud</name>
+	<name>back</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -43,6 +43,11 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.25</version>
 		</dependency>
 	</dependencies>
 
