--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url = jdbc:mysql://localhost:3306/bd_task?serverTimezone=UTC
 spring.datasource.username=usertask
 spring.datasource.password=Desafio2021
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
